--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,17 @@ body {
   background-size: cover;
   font-family: "Outfit", sans-serif;
 }
+
+header svg {
+  width: 1.25rem;
+  height: 1.25rem;
+}
+
+.about-aside svg {
+  width: 3.75rem;
+  height: 3.75rem;
+  padding: 0.75rem;
+  background-color: white;
+  border-radius: 100%;
+  fill: black;
+}
