meal and cart and some other functionality using redux and rtk query user

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,9 @@ body {
   background-size: cover;
   font-family: "Outfit", sans-serif;
 }
-
+html {
+  scroll-behavior: smooth;
+}
 header svg {
   width: 1.25rem;
   height: 1.25rem;
